# hw-c

./: .clang-tidy  CMakeLists.txt  Makefile.tmpl  README.md  buildhw.js  mkhw.sh
.github/workflows/: lint.yml  tests.yml
hws/: CMakeLists.txt
hws/advanced_balance/: main.c
hws/array_swap/: main.c
hws/binary_comparison/: CMakeLists.txt  compare.c  compare.h  test.c
hws/bit_addition/: CMakeLists.txt  addition.c  addition.h  main.c  test.c
hws/division/: Makefile  main.c
hws/double_microscope/: CMakeLists.txt  main.c  number.c  number.h  test.c
hws/fast_polynominal/: main.c
hws/fibonacci_sum/: CMakeLists.txt  main.c
hws/gnome_sort/: main.c
hws/lucky_tickets/: main.c
hws/null_elements/: CMakeLists.txt  main.c
hws/palindrome/: CMakeLists.txt  main.c
hws/paren/: main.c
hws/sem1/advanced_balance/: CMakeLists.txt  main.c
hws/sem1/array_swap/: CMakeLists.txt
hws/sem1/division/: CMakeLists.txt
hws/sem1/double_microscope/: number.c  number.h
hws/sem1/example_homework/: CMakeLists.txt
hws/sem1/fast_polynominal/: CMakeLists.txt
hws/sem1/gnome_sort/: CMakeLists.txt  main.c
hws/sem1/lucky_tickets/: CMakeLists.txt
hws/sem1/paren/: CMakeLists.txt  main.c
hws/sem1/shunting_yard/: main.c
hws/sem2/: CMakeLists.txt
hws/sem2/avl/: CMakeLists.txt  airports.txt  avl.c  bench1.c  bench2.c  file.c  listmap.c  main.c  map.h  test.c
hws/sem2/avl/report/: REPORT.md
hws/sem2/csv/: CMakeLists.txt  common.c  common.h  csv.c  csv.h  display.c  display.h  main.c  test.c
hws/sem2/csv/tests/: big.csv  big.txt  island.txt  oneColumn.txt  oneRow.txt
hws/sem2/states/: CMakeLists.txt  alg.c  alg.h  data.c  data.h  graph.h  main.c  queue.c  queue.h  test1.txt  test1_expected.txt  test2.txt  test3.txt  test3_expected.txt  test4.txt  test4_expected.txt
hws/shunting_yard/: CMakeLists.txt  main.c  test.c  yard.c  yard.h
hws/sorted_list/: CMakeLists.txt  main.c  sortedList.c  sortedList.h  test.c
hws/sorting/: CMakeLists.txt  main.c  sort.c  sort.h  sort.s
hws/substring/: CMakeLists.txt  main.c
hws/warriors/: CMakeLists.txt  main.c
stdhw/: CMakeLists.txt  destruct.h  die.h  list.c  list.h  prompt.c  prompt.h  queue.c  queue.h  stack.c  stack.h  stdhw.h  str.c  str.h  strbuild.c  strbuild.h  strutil.c  strutil.h
stdhw/tests/: CMakeLists.txt  list.c  queue.c  strings.c
